[package]
description = "Winit's X11 backend"
documentation = "https://docs.rs/winit-x11"
edition.workspace = true
license.workspace = true
name = "winit-x11"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["dlopen"]
serde = ["dep:serde", "bitflags/serde", "smol_str/serde", "dpi/serde"]
dlopen = ["x11rb/dl-libxcb", "xkbcommon-dl/dlopen-xkbcommon", "winit-common/x11-dlopen", "x11/skip-buildrs", "dep:x11-dl"]
static = ["winit-common/x11-static", "x11/static"]

[dependencies]
bitflags.workspace = true
cursor-icon.workspace = true
dpi.workspace = true
rwh_06.workspace = true
serde = { workspace = true, optional = true }
smol_str.workspace = true
tracing.workspace = true
winit-core.workspace = true

# Platform-specific
bytemuck.workspace = true
calloop.workspace = true
libc.workspace = true
percent-encoding.workspace = true
rustix = { workspace = true, features = ["std", "system", "thread", "process"] }
winit-common = { workspace = true, features = ["xkb", "x11"] }
x11 = { workspace = true, features = [
    # Enable linking against the following X11 libraries at compile time:
    "dpms",
    "xlib",
    "xlib_xcb",
    "xinput",
] }
x11-dl = { workspace = true, optional = true }
x11rb = { workspace = true, features = [
    "allow-unsafe-code",
    "cursor",
    "randr",
    "resource_manager",
    "sync",
    "xinput",
    "xkb",
] }
xkbcommon-dl = { workspace = true, features = ["x11"] }

[dev-dependencies]
winit.workspace = true

[package.metadata.docs.rs]
all-features = true
